May 31, 2009 Wei Mingzhi <weimingzhi@gmail.com>

 * gui/Config.c, plugins/dfxvideo/cfg.c: Fixed invalid memory access.
 * debian/control: Added libxxf86vm-dev to Build-Depend.

May 30, 2009 Wei Mingzhi <weimingzhi@gmail.com>

 * plugins/peopsxgl/draw.c: Modified for compatiability with x86_64.
 * plugins/peopsxgl/draw.h: Likewise.
 * plugins/peopsxgl/externals.h: Likewise.
 * plugins/peopsxgl/fps.c: Likewise.
 * plugins/peopsxgl/fps.h: Likewise.
 * plugins/peopsxgl/gpu.c: Likewise.
 * plugins/peopsxgl/key.c: Likewise.
 * plugins/peopsxgl/menu.c: Likewise.
 * plugins/peopsxgl/prim.c: Likewise.
 * plugins/peopsxgl/prim.h: Likewise.
 * plugins/peopsxgl/soft.c: Likewise.
 * plugins/peopsxgl/soft.h: Likewise.
 * plugins/peopsxgl/texture.c: Likewise.
 * plugins/peopsxgl/texture.h: Likewise.

Apr 26, 2009 Wei Mingzhi <weimingzhi@gmail.com>

 * plugins/peopsxgl/cfg.c: Integrated P.E.Op.S OpenGL GPU into the build tree.
   Cleaned up the sources, removed Windows-specific stuff.
 * plugins/peopsxgl/cfg.h: Likewise.
 * plugins/peopsxgl/draw.c: Likewise.
 * plugins/peopsxgl/draw.h: Likewise.
 * plugins/peopsxgl/externals.h: Likewise.
 * plugins/peopsxgl/fps.c: Likewise.
 * plugins/peopsxgl/fps.h: Likewise.
 * plugins/peopsxgl/gl_ext.h: Likewise.
 * plugins/peopsxgl/gpu.c: Likewise.
 * plugins/peopsxgl/gpu.h: Likewise.
 * plugins/peopsxgl/key.c: Likewise.
 * plugins/peopsxgl/key.h: Likewise.
 * plugins/peopsxgl/menu.c: Likewise.
 * plugins/peopsxgl/menu.h: Likewise.
 * plugins/peopsxgl/prim.c: Likewise.
 * plugins/peopsxgl/prim.h: Likewise.
 * plugins/peopsxgl/soft.c: Likewise.
 * plugins/peopsxgl/soft.h: Likewise.
 * plugins/peopsxgl/stdafx.h: Likewise.
 * plugins/peopsxgl/texture.c: Likewise.
 * plugins/peopsxgl/texture.h: Likewise.
 * plugins/peopsxgl/zn.c: Likewise.
 * plugins/peopsxgl/Makefile.am: Likewise.
 * plugins/dfOpenGL/GPU.c: Changed the name of the plugin into "PCSX-df OpenGL
   Driver" to avoid confusion.

Apr 23, 2009 Wei Mingzhi <weimingzhi@gmail.com>
